src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* --------------------------------------------------------- */

@keyframes shimmer {
  0% {
    background-position: -200% 0;
  }
  100% {
    background-position: 200% 0;
  }
}

body, html {
    scroll-behavior: smooth;
}

.shimmery-button {
  position: relative;
  overflow: hidden;
  background-size: 400% 100%; /* Adjust the background size to ensure smooth transition */
  background-image: linear-gradient(
    110deg,
    #3b82f6 20%,
    #8963e2 40%,
    #3b82f6 60%
  );
  animation: shimmer 12s linear infinite;
  color: white;
  text-align: center;
  font-weight: bold;
}

.shimmery-button:disabled {
  background: #3b82f6;
  animation: none;
}

.simple-shadow {
  box-shadow: 0 0 9px #767676;
}

@keyframes float {
  0% {
    transform: translateY(0) translateX(0) rotate(0deg);
  }
  10% {
    transform: translateY(-10px) translateX(-10px) rotate(-2deg);
  }
  20% {
    transform: translateY(-20px) translateX(10px) rotate(2deg);
  }
  30% {
    transform: translateY(-10px) translateX(-10px) rotate(-2deg);
  }
  40% {
    transform: translateY(0) translateX(0) rotate(0deg);
  }
  100% {
    transform: translateY(0) translateX(0) rotate(0deg);
  }
}
.float-animation {
  animation: float 20s ease-in-out infinite;
}


code {
  overflow: scroll;
}

